@@ -16,6 +16,7 @@ Users
 + Elves and Rangers will no longer perform hand to hand combat attacks twice.
 + Screenshots now save to files/screenshot_[time].(png|bmp)
 + Starting monster stack sizes are now more in line with Heroes II defaults.
++ Added an info window in the status bar when collecting resources.
 
 Developers
 + Added wrapper library around SDL_net and networking client/server examples.
